...
  const val PROFILE_TAB = "ProfileTab"
  const val TIMER_TAB = "TimerTab"
  const val FRIENDS_TAB = "FriendsTab"
  const val SETTINGS_TAB = "SettingsButton"
  const val LOGOUT_TAB = "LogoutButton"
  const val DROP_MENU = "DropMenu"
  const val TOP_BAR_TITLE = "TopBarTitle"
  const val ADD_EVENT_TAB = "AddEventTab"
  const val ADD_GROUP_TAB = "AddGroupTab"
  const val EDIT_EVENT_TAB = "EditEventTab"
  const val FIND_FRIENDS_TAB = "FindFriendsTab"
  const val USER_PROFILE_TAB = "UserProfileTab"
  const val BADGE_TAB = "BadgeTab"
...
