package com.android.gatherly.ui.events

import android.Manifest
import androidx.compose.ui.test.SemanticsMatcher
import androidx.compose.ui.test.SemanticsNodeInteraction
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.assertIsNotEnabled
import androidx.compose.ui.test.assertTextContains
import androidx.compose.ui.test.hasAnyDescendant
import androidx.compose.ui.test.hasTestTag
import androidx.compose.ui.test.isDisplayed
import androidx.compose.ui.test.isNotDisplayed
import androidx.compose.ui.test.junit4.ComposeTestRule
import androidx.compose.ui.test.junit4.createComposeRule
import androidx.compose.ui.test.onAllNodesWithTag
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollToNode
import androidx.compose.ui.test.performTextClearance
import androidx.compose.ui.test.performTextInput
import androidx.test.rule.GrantPermissionRule
import com.android.gatherly.model.event.Event
import com.android.gatherly.model.event.EventStatus
import com.android.gatherly.model.event.EventsLocalRepository
import com.android.gatherly.model.event.EventsRepository
import com.android.gatherly.model.map.Location
import com.android.gatherly.model.notification.NotificationsLocalRepository
import com.android.gatherly.model.profile.Profile
import com.android.gatherly.model.profile.ProfileLocalRepository
import com.android.gatherly.model.profile.ProfileRepository
import com.android.gatherly.ui.navigation.NavigationTestTags
import com.android.gatherly.utils.AlertDialogTestTags
import com.android.gatherly.utils.MapCoordinator
import com.android.gatherly.utils.MockitoUtils
import com.android.gatherly.utils.UI_WAIT_TIMEOUT
import com.android.gatherly.utils.distance
import com.google.firebase.Timestamp
import java.text.SimpleDateFormat
import java.time.Instant
import java.time.temporal.ChronoUnit
import java.util.Date
import java.util.Locale
import java.util.NoSuchElementException
import kotlinx.coroutines.runBlocking
import kotlinx.coroutines.test.runTest
import org.junit.Before
import org.junit.Rule
import org.junit.Test

class EventsOverviewScreenTest {

  @get:Rule val composeTestRule = createComposeRule()

  @get:Rule
  val permissionRule: GrantPermissionRule =
      GrantPermissionRule.grant(
          Manifest.permission.ACCESS_FINE_LOCATION, Manifest.permission.ACCESS_COARSE_LOCATION)

  private lateinit var currentUserId: String
  private lateinit var eventsRepository: EventsRepository
  private lateinit var profileRepository: ProfileRepository
  private lateinit var eventsOverviewViewModel: EventsOverviewViewModel
  private lateinit var mockitoUtils: MockitoUtils
  private lateinit var mapCoordinator: MapCoordinator

  /** Setup function to initialize repositories and ViewModel before each test */
  @Before
  fun setUp() {
    eventsRepository = EventsLocalRepository()
    profileRepository = ProfileLocalRepository()
    currentUserId = ""

    mapCoordinator = MapCoordinator()

    // Mock Firebase Auth
    mockitoUtils = MockitoUtils()
  }

  /** Helper function: set the content of the composeTestRule without initial events */
  private fun setContent(uid: String = currentUserId) {
    mockitoUtils.chooseCurrentUser(uid)
    currentUserId = uid
    eventsOverviewViewModel =
        EventsOverviewViewModel(
            eventsRepository = eventsRepository,
            profileRepository = profileRepository,
            authProvider = { mockitoUtils.mockAuth },
            notificationsRepository = NotificationsLocalRepository())
    composeTestRule.setContent {
      EventsOverviewScreen(
          eventsOverviewViewModel = eventsOverviewViewModel,
          actions = EventsScreenActions(),
          coordinator = mapCoordinator)
    }
  }

  /* ----------------------------- Helper Functions and Test Data -----------------------------*/

  private val start =
      SimpleDateFormat("HH:mm").parse("12:00") ?: throw NoSuchElementException("no date ")
  private val finish =
      SimpleDateFormat("HH:mm").parse("23:00") ?: throw NoSuchElementException("no date ")

  /** Helper function to create an event for the current user */
  private fun createYourEvent(currentUserId: String): Event {
    return Event(
        id = "mine",
        title = "working session with Gab",
        description = "Need to work in the CO with Gab, in order to finish the TDS homework",
        creatorName = "Sofija",
        location = Location(46.520278, 6.565556, "EPFL"),
        date = tomorrowTimestamp,
        startTime = Timestamp(start),
        endTime = Timestamp(finish),
        creatorId = currentUserId,
        participants = listOf("Gabriel", "Sofija"),
        status = EventStatus.UPCOMING)
  }

  // --- Upcoming EVENT
  private val tomorrowTimestamp = Timestamp(Date.from(Instant.now().plus(1, ChronoUnit.DAYS)))
  private val upcomingEvent =
      Event(
          id = "upcomingEventId1",
          title = "Tomorrow's Event 1",
          description = "An event happening tomorrow",
          creatorName = "Alice",
          location = Location(46.520278, 6.565556, "EPFL"),
          date = tomorrowTimestamp,
          startTime = Timestamp(start),
          endTime = Timestamp(finish),
          creatorId = "aliceId",
          participants = listOf(),
          status = EventStatus.UPCOMING)

  private val upcomingEventParticipate =
      Event(
          id = "upcomingEventIdParticipate",
          title = "Tomorrow's Event 2",
          description = "An event happening tomorrow",
          creatorName = "Alice",
          location = Location(46.520278, 6.565556, "EPFL"),
          date = tomorrowTimestamp,
          startTime = Timestamp(start),
          endTime = Timestamp(finish),
          creatorId = "aliceId",
          participants = listOf("bobId"),
          status = EventStatus.UPCOMING)

  private val upcomingEventCreated =
      Event(
          id = "CreatedUpcomingEventId",
          title = "Tomorrow's Event 3",
          description = "An event happening tomorrow",
          creatorName = "Bob",
          location = Location(46.520278, 6.565556, "EPFL"),
          date = tomorrowTimestamp,
          startTime = Timestamp(start),
          endTime = Timestamp(finish),
          creatorId = "bobId",
          participants = listOf(),
          status = EventStatus.UPCOMING)

  // ---- ONGOING EVENT
  private val oneHourAgo = Timestamp(Date(System.currentTimeMillis() - 3600_000))
  private val oneHourLater = Timestamp(Date(System.currentTimeMillis() + 3600_000))
  private val ongoingEvent =
      Event(
          id = "ongoing",
          title = "Ongoing Event 1",
          description = "An event currently happening",
          creatorName = "Alice",
          location = Location(46.520278, 6.565556, "EPFL"),
          date = Timestamp.now(),
          startTime = oneHourAgo,
          endTime = oneHourLater,
          creatorId = "aliceId",
          participants = listOf(),
          status = EventStatus.ONGOING)
  private val ongoingEventParticipating =
      Event(
          id = "ongoing2",
          title = "Ongoing Event 2",
          description = "An event currently happening",
          creatorName = "Alice",
          location = Location(46.520278, 6.565556, "EPFL"),
          date = Timestamp.now(),
          startTime = oneHourAgo,
          endTime = oneHourLater,
          creatorId = "aliceId",
          participants = listOf("bobId"),
          status = EventStatus.ONGOING)
  private val ongoingEventCreated =
      Event(
          id = "ongoing3",
          title = "Ongoing Event 3",
          description = "An event currently happening",
          creatorName = "Bob",
          location = Location(46.520278, 6.565556, "EPFL"),
          date = Timestamp.now(),
          startTime = oneHourAgo,
          endTime = oneHourLater,
          creatorId = "bobId",
          participants = listOf(),
          status = EventStatus.ONGOING)

  // ----- PAST EVENT
  private val yesterdayTimestamp = Timestamp(Date.from(Instant.now().minus(1, ChronoUnit.DAYS)))
  private val pastEvent =
      Event(
          id = "past",
          title = "Past Event 1",
          description = "An event is already past",
          creatorName = "Alice",
          location = Location(46.520278, 6.565556, "EPFL"),
          date = yesterdayTimestamp,
          startTime = Timestamp(start),
          endTime = Timestamp(finish),
          creatorId = "aliceId",
          participants = listOf(),
          status = EventStatus.PAST)

  private val pastEventParticipating =
      Event(
          id = "past2",
          title = "Past Event 2",
          description = "An event is already past",
          creatorName = "Alice",
          location = Location(46.520278, 6.565556, "EPFL"),
          date = yesterdayTimestamp,
          startTime = Timestamp(start),
          endTime = Timestamp(finish),
          creatorId = "aliceId",
          participants = listOf("bobId"),
          status = EventStatus.PAST)
  private val pastEventCreated =
      Event(
          id = "past3",
          title = "Past Event 3",
          description = "An event is already past",
          creatorName = "Bob",
          location = Location(46.520278, 6.565556, "EPFL"),
          date = yesterdayTimestamp,
          startTime = Timestamp(start),
          endTime = Timestamp(finish),
          creatorId = "bobId",
          participants = listOf(),
          status = EventStatus.PAST)

  /* --------------------------------------- Test Cases ----------------------------------------*/

  /**
   * Test: Verifies that when there is no event registered, all relevant UI components are displayed
   * correctly.
   */
  @Test
  fun testTagsCorrectlySetWhenListsAreEmpty() {
    setContent()
    composeTestRule
        .onNodeWithTag(NavigationTestTags.TOP_BAR_TITLE)
        .assertTextContains("Events", substring = true, ignoreCase = true)
    composeTestRule.onNodeWithTag(AlertDialogTestTags.ALERT).assertIsNotDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.BROWSE_TITLE).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.EMPTY_BROWSER_LIST_MSG).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.UPCOMING_TITLE).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.EMPTY_UPCOMING_LIST_MSG).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.YOUR_EVENTS_TITLE).assertIsDisplayed()
    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.EMPTY_OUR_EVENTS_LIST_MSG)
        .assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.CREATE_EVENT_BUTTON).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.ALL_LISTS).assertIsDisplayed()
  }

  /**
   * Test : Log in as Anonym Bob, create her own event. Verifies that Bob does see her event in
   * "Your Events" list. Verifies if the title and date of the event are correctly displayed.
   */
  @Test
  fun testYourEventDisplayCorrectly() = runTest {
    // Sign in as Bob
    val bobId = "bobId"
    val eventByBob = createYourEvent(bobId)
    eventsRepository.addEvent(eventByBob)

    setContent(bobId)

    composeTestRule.waitForIdle()

    composeTestRule.onNodeWithTag(EventsScreenTestTags.BROWSE_TITLE).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.EMPTY_BROWSER_LIST_MSG).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.UPCOMING_TITLE).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.EMPTY_UPCOMING_LIST_MSG).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.YOUR_EVENTS_TITLE).assertIsDisplayed()
    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.EMPTY_OUR_EVENTS_LIST_MSG)
        .assertIsNotDisplayed()
    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.getTestTagForEventItem(eventByBob))
        .assertIsDisplayed()
    composeTestRule.onEventItem(eventByBob, hasTestTag(EventsScreenTestTags.EVENT_TITLE))
    composeTestRule.onEventItem(eventByBob, hasTestTag(EventsScreenTestTags.EVENT_DATE))
  }

  /**
   * Test: scenario: Log in as Anonym Alice, create her own event, log out. Log in as Anonym Bob,
   * and get his screen. Verifies that Bob does see Alice's event in browser events list. Verifies
   * if the title and date of the event are correctly displayed.
   */
  @Test
  fun testBrowserEventDisplayCorrectly() = runTest {
    // Sign in as Alice
    val aliceId = "aliceId"
    // Create event by Alice
    val eventByAlice = createYourEvent(aliceId)
    eventsRepository.addEvent(eventByAlice)

    // Sign in as Bob
    val bobId = "bobId"

    setContent(bobId)

    composeTestRule.waitForIdle()

    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.getTestTagForEventItem(eventByAlice))
        .assertIsDisplayed()
    // Check that the event created by Alice show up in the Bob's browser list
    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.EMPTY_BROWSER_LIST_MSG)
        .assertIsNotDisplayed()

    composeTestRule.onNodeWithTag(EventsScreenTestTags.UPCOMING_TITLE).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.EMPTY_UPCOMING_LIST_MSG).assertIsDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.YOUR_EVENTS_TITLE).assertIsDisplayed()
    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.EMPTY_OUR_EVENTS_LIST_MSG)
        .assertIsDisplayed()

    // Check that the event details (title and date) are correctly displayed
    composeTestRule.onEventItem(eventByAlice, hasTestTag(EventsScreenTestTags.EVENT_TITLE))
    composeTestRule.onEventItem(eventByAlice, hasTestTag(EventsScreenTestTags.EVENT_DATE))
  }

  /**
   * Test: scenario: Log in as Anonym Alice, create her own event, log out. Log in as Anonym Bob,
   * and get his screen. Verifies that Bob does see Alice's event in browser events list. Click on
   * the Alice Event in browser events list. Verifies that the AlertDialog is displayed Click on
   * Participate button. Verifies that Bob is added to the participants list of the event.
   */
  @Test
  fun testUpcomingEventDisplayCorrectly() = runTest {
    // Sign in as Alice
    val aliceId = "aliceId"
    // Create event by Alice
    val eventByAlice = createYourEvent(aliceId)
    eventsRepository.addEvent(eventByAlice)

    // Sign in as Bob
    val bobId = "bobId"

    setContent(bobId)

    profileRepository.addProfile(Profile(uid = "bobId", name = "Test User", profilePicture = ""))

    composeTestRule.waitForIdle()

    // Check that the event created by Alice show up in the Bob's browser list
    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.getTestTagForEventItem(eventByAlice))
        .assertIsDisplayed()
    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.EMPTY_BROWSER_LIST_MSG)
        .assertIsNotDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.EMPTY_UPCOMING_LIST_MSG).assertIsDisplayed()

    // Click on the event item
    composeTestRule.clickEventItem(eventByAlice)
    // Check that the popup is displayed
    composeTestRule.onNodeWithTag(AlertDialogTestTags.ALERT).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.DISMISS_BTN).assertIsDisplayed()

    // Click on Participate button
    composeTestRule
        .onNodeWithTag(AlertDialogTestTags.CONFIRM_BTN)
        .assertIsDisplayed()
        .performClick()

    // Wait until the popup is closed
    composeTestRule.waitUntil(UI_WAIT_TIMEOUT) {
      composeTestRule.onAllNodesWithTag(AlertDialogTestTags.ALERT).fetchSemanticsNodes().isEmpty()
    }
    composeTestRule.waitForIdle()

    // Verify that Bob is added to the participants list of the event
    val updated = eventsRepository.getEvent(eventByAlice.id)
    composeTestRule.waitUntil(UI_WAIT_TIMEOUT) { updated.participants.contains(bobId) }

    // Verify that the event is no longer in the browser events list
    // and is now in the upcoming events list
    composeTestRule.waitUntil(UI_WAIT_TIMEOUT) {
      composeTestRule
          .onAllNodesWithTag(EventsScreenTestTags.EMPTY_BROWSER_LIST_MSG)
          .fetchSemanticsNodes()
          .isNotEmpty() &&
          composeTestRule
              .onAllNodesWithTag(EventsScreenTestTags.EMPTY_UPCOMING_LIST_MSG)
              .fetchSemanticsNodes()
              .isEmpty()
    }

    composeTestRule.onNodeWithTag(EventsScreenTestTags.EMPTY_BROWSER_LIST_MSG).assertIsDisplayed()
    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.EMPTY_UPCOMING_LIST_MSG)
        .assertIsNotDisplayed()
  }

  /**
   * Test: scenario: Log in as Anonym Alice, create her own event, log out. Log in as Anonym Bob,
   * and get his screen. Bob want to participate to Alice's event. Clicks on the event. Click on
   * Participate button. Verifies that Bob is added to the participants list of the event. Then Bob
   * want to unregister from the event. Clicks on the event. Click on Unregister button. Verifies
   * that Bob is removed from the participants. Verifies that the event is back in the browser
   * events list.
   */
  @Test
  fun testUnregisterUpcomingEventCorrectly() = runTest {
    // Sign in as Alice
    val aliceId = "aliceId"
    // Create event by Alice
    val eventByAlice = createYourEvent(aliceId)
    eventsRepository.addEvent(eventByAlice)

    // Sign in as Bob
    val bobId = "bobId"

    setContent(bobId)

    profileRepository.addProfile(Profile(uid = "bobId", name = "Test User", profilePicture = ""))

    // Verify that Alice's event is displayed
    composeTestRule.waitUntil(UI_WAIT_TIMEOUT) {
      runBlocking { eventsRepository.getAllEvents().contains(eventByAlice) }
    }

    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.getTestTagForEventItem(eventByAlice))
        .assertIsDisplayed()

    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.EMPTY_BROWSER_LIST_MSG)
        .assertIsNotDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.EMPTY_UPCOMING_LIST_MSG).assertIsDisplayed()

    // Click on the event item and participate button
    composeTestRule.clickEventItem(eventByAlice)
    composeTestRule.onNodeWithTag(AlertDialogTestTags.ALERT).assertIsDisplayed()
    composeTestRule
        .onNodeWithTag(AlertDialogTestTags.CONFIRM_BTN)
        .assertIsDisplayed()
        .performClick()

    // Wait to add Bob as participant
    val updatedAliceEvent = eventsRepository.getEvent(eventByAlice.id)
    composeTestRule.waitUntil(UI_WAIT_TIMEOUT) { updatedAliceEvent.participants.contains(bobId) }

    // Verify that Bob is registered to the event
    composeTestRule.waitUntil(UI_WAIT_TIMEOUT) {
      val browserEmpty =
          composeTestRule
              .onAllNodesWithTag(EventsScreenTestTags.EMPTY_BROWSER_LIST_MSG)
              .fetchSemanticsNodes()
              .isNotEmpty()
      val upcomingNotEmpty =
          composeTestRule
              .onAllNodesWithTag(EventsScreenTestTags.EMPTY_UPCOMING_LIST_MSG)
              .fetchSemanticsNodes()
              .isEmpty()
      browserEmpty && upcomingNotEmpty
    }

    // Click on the event item and unregister button
    composeTestRule.clickEventItem(eventByAlice)
    composeTestRule.onNodeWithTag(AlertDialogTestTags.ALERT).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.TITLE).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.DATE_TEXT).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.CREATOR_TEXT).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.BODY).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.DISMISS_BTN).assertIsDisplayed()
    composeTestRule
        .onNodeWithTag(AlertDialogTestTags.CONFIRM_BTN)
        .assertIsDisplayed()
        .performClick()

    // Verify that Bob is removed from the participants list of the event
    val updatedBobRemoved = eventsRepository.getEvent(eventByAlice.id)
    composeTestRule.waitUntil { !updatedBobRemoved.participants.contains(bobId) }

    // Verify that the event is back in the browser events list
    composeTestRule.waitUntil(UI_WAIT_TIMEOUT) {
      val browserNotEmpty =
          composeTestRule
              .onAllNodesWithTag(EventsScreenTestTags.EMPTY_BROWSER_LIST_MSG)
              .fetchSemanticsNodes()
              .isEmpty()
      val upcomingEmpty =
          composeTestRule
              .onAllNodesWithTag(EventsScreenTestTags.EMPTY_UPCOMING_LIST_MSG)
              .fetchSemanticsNodes()
              .isNotEmpty()
      browserNotEmpty && upcomingEmpty
    }

    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.EMPTY_BROWSER_LIST_MSG)
        .assertIsNotDisplayed()
    composeTestRule.onNodeWithTag(EventsScreenTestTags.EMPTY_UPCOMING_LIST_MSG).assertIsDisplayed()
  }

  /**
   * Test: scenario: Log in as Anonym Bob, create his own event. Verifies that Bob does see his
   * event in "Your Events" list. Click on the Bob Event in "Your Events" list. Verifies that the
   * AlertDialog is displayed with the correct information. Verifies that the "Edit" button is
   * displayed. Verifies that Bob can click on the "Edit" button. Verifies that Bob is redirected to
   * the Edit Event screen.
   */
  @Test
  fun testCanEditAnEvent() = runTest {
    // Sign in as Bob
    val bobId = "bobId"
    // Create event by Bob
    val eventByBob = createYourEvent(bobId)
    eventsRepository.addEvent(eventByBob)

    setContent(bobId)

    // Verify that Bob's event is displayed
    composeTestRule.waitUntil(UI_WAIT_TIMEOUT) {
      runBlocking { eventsRepository.getAllEvents().contains(eventByBob) }
    }

    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.getTestTagForEventItem(eventByBob))
        .assertIsDisplayed()
    // Click on Bob's event item and verify the popup
    composeTestRule.clickEventItem(eventByBob)
    composeTestRule.onNodeWithTag(AlertDialogTestTags.ALERT).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.DISMISS_BTN).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.TITLE).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.DATE_TEXT).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.CREATOR_TEXT).assertIsNotDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.BODY).assertIsDisplayed()
    // Click on the Edit button
    composeTestRule
        .onNodeWithTag(AlertDialogTestTags.CONFIRM_BTN)
        .assertIsDisplayed()
        .performClick()
  }

  /**
   * Test: scenario: Log in as Anonym Bob, create his own event. Verifies that Bob does see his
   * event in "Your Events" list. Click on the Bob Event in "Your Events" list. Verifies that the
   * AlertDialog is displayed with the correct information. Verifies that the "Cancel" button is
   * displayed. Verifies that Bob can click on the "Cancel" button. Verifies that the pop up is
   * closed and Bob is back to the overview screen.
   */
  @Test
  fun testCanCloseAlertDialogYourEvent() = runTest {
    // Sign in as Bob
    val bobId = "bobId"
    // Create event by Bob
    val eventByBob = createYourEvent(bobId)
    eventsRepository.addEvent(eventByBob)

    setContent(bobId)

    // Verify that Bob's event is displayed
    composeTestRule.waitUntil(UI_WAIT_TIMEOUT) {
      runBlocking { eventsRepository.getAllEvents().contains(eventByBob) }
    }

    composeTestRule
        .onNodeWithTag(EventsScreenTestTags.getTestTagForEventItem(eventByBob))
        .assertIsDisplayed()
    composeTestRule.clickEventItem(eventByBob)
    composeTestRule.onNodeWithTag(AlertDialogTestTags.ALERT).assertIsDisplayed()
    composeTestRule.onNodeWithTag(AlertDialogTestTags.TITLE).assertIsDisplayed()
